--- a/assets/templates/crypto-b/api/style.css
+++ b/assets/templates/crypto-b/api/style.css
@@ -69,13 +69,13 @@ span {
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
 	.panel__flex {
-		flex-wrap: wrap;
+		/* flex-wrap: wrap; */
 		padding: 30px 0;
 	}
 	
   .panel {
 		margin-bottom: 30px;
-		width: 300px;
+		width: auto;
 		background: rgba(255, 255, 255, 0.9);
 	}
 }
@@ -87,6 +87,9 @@ span {
 	}
 	
 	.panel {
+		margin-bottom: 20px;
 		width: auto;
+		/* background: url('../img/panel-b-s.png') no-repeat top; */
+		background: rgba(255, 255, 255, 0.9);
 	}
 }
