--- a/assets/templates/crypto-b/sass/blocks/trading.scss
+++ b/assets/templates/crypto-b/sass/blocks/trading.scss
@@ -163,13 +163,11 @@
 /* Smartphones (вертикальная и горизонтальная ориентация) ----------- */
 @media only screen and (min-width : 320px) and (max-width : 480px) {
   .trading {
-    min-height: 440px;
     background: #00aeef;
     
     & h2 {
       margin-top: 40px;
       margin-bottom: 0;
-      text-align: center;
     }
     
     & p {
@@ -181,6 +179,7 @@
   
   .trading__flex {
     flex-direction: column;
+    align-items: center;
   }
   
   .container--trading {
@@ -189,6 +188,7 @@
   
   .coin__flex {
     justify-content: space-around;
+    padding: 30px 0;
   }
   
   .coin__c-1,
@@ -201,7 +201,7 @@
   }
   
   .trading__coin {
-    min-height: 180px;
+    // min-height: 180px;
     margin-top: 40px;
   }
   
