--- a/assets/templates/crypto-b/sass/blocks/edge.scss
+++ b/assets/templates/crypto-b/sass/blocks/edge.scss
@@ -27,23 +27,23 @@
 }
 
 .edge__box--e-1 {
-  background: url("../img/e-1-t.png") no-repeat top;
+  background: url("../img/e-1.png") no-repeat top;
 }
 
 .edge__box--e-2 {
-  background: url("../img/e-2-t.png") no-repeat top;
+  background: url("../img/e-2.png") no-repeat top;
 }
 
 .edge__box--e-3 {
-  background: url("../img/e-3-t.png") no-repeat top;
+  background: url("../img/e-3.png") no-repeat top;
 }
 
 .edge__box--e-4 {
-  background: url("../img/e-4-t.png") no-repeat top;
+  background: url("../img/e-4.png") no-repeat top;
 }
 
 .edge__box--e-5 {
-  background: url("../img/e-5-t.png") no-repeat top;
+  background: url("../img/e-5.png") no-repeat top;
 }
 
 .edge__box:hover {
