--- a/assets/templates/crypto-b/sass/blocks/page-header.scss
+++ b/assets/templates/crypto-b/sass/blocks/page-header.scss
@@ -1,5 +1,5 @@
 .page-header {
-  background: #00aeef url("../img/header-t.png") top;
+  background: #00aeef url("../img/header.png") top;
   background-size: cover;
 }
 
