--- a/assets/templates/crypto/index.html
+++ b/assets/templates/crypto/index.html
@@ -7,6 +7,11 @@
   <title>Cryptologi</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/media.css">
+  <!-- API -->
+	<link rel="stylesheet" href="api/style.css"></link>
+  
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
   <header class="page-header">
@@ -29,6 +34,80 @@
       </div>
     </div>
   </header>
+  <section class="panels">
+    <div class="container">
+      <!-- <div class="row"> -->
+      <div class="panel__flex">
+        <div class="price-boxes">
+  				<div class="panel-group">
+  					<div class="panel panel-default">
+  						<div class="panel-body">
+  							<!-- <h6><a href="https://www.cryptocompare.com">Source: CryptoCompare.com</a></h6> -->
+  							<h2 class="price-display">BTCUSD <span class="price" id="PRICE_BTC"></span></h2>
+  							<h5>24h Change: <span id="CHANGE24HOUR_BTC"></span><span id="CHANGE24HOURPCT_BTC"></span><br></h5>
+  							<h5>Last Market: <span class="exchange" id="LASTMARKET_BTC"></span> <br></h5>
+  							<h5>Open Hour: <span id="OPENHOUR_BTC"></span><br></h5>
+  							<h5>High Hour: <span id="HIGHHOUR_BTC"></span><br></h5>
+  							<h5>Low Hour: <span id="LOWHOUR_BTC"></span><br></h5>
+  							<h5>Open Day: <span id="OPEN24HOUR_BTC"></span><br></h5>
+  							<h5>High Day: <span id="HIGH24HOUR_BTC"></span><br></h5>
+  							<h5>Low Day: <span id="LOW24HOUR_BTC"></span><br></h5>
+  							<h5>Last Trade Volume: <span id="LASTVOLUME_BTC"></span><br></h5>
+  							<h5>Last Trade Volume To: <span id="LASTVOLUMETO_BTC"></span><br></h5>
+  							<h5>24h Volume: <span id="VOLUME24HOUR_BTC"></span><br></h5>
+  							<h5>24h VolumeTo: <span id="VOLUME24HOURTO_BTC"></span><br></h5>
+  						</div>
+  					</div>
+  				</div>
+  			</div>
+  			<div class="price-boxes">
+  				<div class="panel-group">
+  					<div class="panel panel-default">
+  						<div class="panel-body">
+  							<!-- <h6><a href="https://www.cryptocompare.com">Source: CryptoCompare.com</a></h6> -->
+  							<h2 class="price-display">ETHUSD <span class="price" id="PRICE_ETH"></span></h2>
+  							<h5>24h Change: <span id="CHANGE24HOUR_ETH"></span><span id="CHANGE24HOURPCT_ETH"></span><br></h5>
+  							<h5>Last Market: <span class="exchange" id="LASTMARKET_ETH"></span> <br></h5>
+  							<h5>Open Hour: <span id="OPENHOUR_ETH"></span><br></h5>
+  							<h5>High Hour: <span id="HIGHHOUR_ETH"></span><br></h5>
+  							<h5>Low Hour: <span id="LOWHOUR_ETH"></span><br></h5>
+  							<h5>Open Day: <span id="OPEN24HOUR_ETH"></span><br></h5>
+  							<h5>High Day: <span id="HIGH24HOUR_ETH"></span><br></h5>
+  							<h5>Low Day: <span id="LOW24HOUR_ETH"></span><br></h5>
+  							<h5>Last Trade Volume: <span id="LASTVOLUME_ETH"></span><br></h5>
+  							<h5>Last Trade Volume To: <span id="LASTVOLUMETO_ETH"></span><br></h5>
+  							<h5>24h Volume: <span id="VOLUME24HOUR_ETH"></span><br></h5>
+  							<h5>24h VolumeTo: <span id="VOLUME24HOURTO_ETH"></span><br></h5>
+  						</div>
+  					</div>
+  				</div>
+  			</div>
+        <div class="price-boxes">
+  				<div class="panel-group">
+  					<div class="panel panel-default">
+  						<div class="panel-body">
+  							<!-- <h6><a href="https://www.cryptocompare.com">Source: CryptoCompare.com</a></h6> -->
+  							<h2 class="price-display">LTCUSD <span class="price" id="PRICE_LTC"></span></h2>
+  							<h5>24h Change: <span id="CHANGE24HOUR_BTC"></span><span id="CHANGE24HOURPCT_LTC"></span><br></h5>
+  							<h5>Last Market: <span class="exchange" id="LASTMARKET_LTC"></span> <br></h5>
+  							<h5>Open Hour: <span id="OPENHOUR_LTC"></span><br></h5>
+  							<h5>High Hour: <span id="HIGHHOUR_LTC"></span><br></h5>
+  							<h5>Low Hour: <span id="LOWHOUR_LTC"></span><br></h5>
+  							<h5>Open Day: <span id="OPEN24HOUR_LTC"></span><br></h5>
+  							<h5>High Day: <span id="HIGH24HOUR_LTC"></span><br></h5>
+  							<h5>Low Day: <span id="LOW24HOUR_LTC"></span><br></h5>
+  							<h5>Last Trade Volume: <span id="LASTVOLUME_LTC"></span><br></h5>
+  							<h5>Last Trade Volume To: <span id="LASTVOLUMETO_LTC"></span><br></h5>
+  							<h5>24h Volume: <span id="VOLUME24HOUR_LTC"></span><br></h5>
+  							<h5>24h VolumeTo: <span id="VOLUME24HOURTO_LTC"></span><br></h5>
+  						</div>
+  					</div>
+  				</div>
+  			</div>
+      </div>
+		<!-- </div> -->
+    </div>
+  </section>
   <section class="info">
     <div class="container">
       <div class="container__info">
@@ -201,5 +280,9 @@ Past performance is not indicative of future results. Any investment in blockcha
   </footer>
   <script src="js/jquery.js"></script>
   <script src="js/script.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.2/socket.io.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="api/ccc-streamer-utilities.js"></script>
+	<script src="api/stream.js"></script>
 </body>
 </html>
