--- a/assets/templates/forex/templates/account-types.html
+++ b/assets/templates/forex/templates/account-types.html
@@ -36,7 +36,18 @@
   </header>
   <section class="page-header__sub-menu">
     <div class="container__temp">
-      <p>Accounts<br>types</p>
+      <div class="page-header__sub-flex">
+        <p>Accounts<br>types</p>
+        <div class="page-header__sub-box">
+          <a href="#">ACCOUNT TYPES</a>
+          <a href="#">ACCOUNT COMPARISON</a>
+          <a href="#">PRODUCT SPECIFICATION</a>
+          <a href="#">TRADING SPECIFICATION</a>
+          <a href="#">FUNDING AND WITHDROVAL</a>
+          <a href="#">ANNOUNCEMENTS</a>
+          <button class="page-header__arrow"></button>
+        </div>
+      </div>
     </div>
   </section>
   <section class="account">
