--- a/assets/templates/forex/css/style.css
+++ b/assets/templates/forex/css/style.css
@@ -828,12 +828,55 @@ body {
     font-weight: bold;
     text-transform: uppercase; }
 
-.account p {
-  margin-top: 40px;
-  padding-bottom: 40px;
-  color: #000e55;
-  font-size: 18px;
-  text-align: center; }
+.account {
+  z-index: 1; }
+  .account p {
+    margin-top: 40px;
+    padding-bottom: 40px;
+    color: #000e55;
+    font-size: 18px;
+    text-align: center; }
+
+.page-header__sub-menu {
+  position: relative;
+  z-index: 2; }
+
+.page-header__sub-flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+
+.page-header__sub-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  width: 250px;
+  height: 340px;
+  margin-left: 290px;
+  background: rgba(0, 0, 0, 0.7); }
+  .page-header__sub-box a {
+    padding: 15px 30px;
+    color: #fff;
+    font-size: 12px;
+    font-weight: bold;
+    text-decoration: none; }
+
+.page-header__arrow {
+  display: block;
+  margin: auto;
+  width: 38px;
+  height: 38px;
+  border: none;
+  background: url("../img/acc-elipse.png") no-repeat center, url("../img/acc-arrow.png") no-repeat center;
+  -webkit-transition: 0.3s;
+  transition: 0.3s; }
+  .page-header__arrow:hover {
+    -webkit-transform: rotate(180deg);
+    transform: rotate(180deg); }
 
 .account__types {
   display: -webkit-box;
