--- a/assets/templates/crypto/api/style.css
+++ b/assets/templates/crypto/api/style.css
@@ -8,7 +8,7 @@
 	display: flex;
 	justify-content: space-around;
 	/* flex-wrap: wrap; */
-	padding: 90px 0;
+	padding: 90px 0 45px 0;
 }
 
 .panel {
@@ -65,6 +65,38 @@ span {
 
 .exchange {
 	color: #42f492;
+}
+
+.panel__link {
+	display: block;
+	width: 225px;
+	/* height: 30px; */
+	margin: 0 auto;
+	margin-top: 45px;
+	padding: 10px 0;
+	color: #000;
+	font-size: 18px;
+	font-weight: bold;
+	text-align: center;
+	text-decoration: none;
+	border-radius: 50px;
+	transition: 200ms;
+}
+
+.panel__link:hover {
+	transform: scale(1.1);
+}
+
+.panel__link--btc {
+	background: #a2c0ca url('../img/link-b.png') no-repeat 5px;
+}
+
+.panel__link--eth {
+	background: #a2c0ca url('../img/link-e.png') no-repeat 5px;
+}
+
+.panel__link--ltc {
+	background: #a2c0ca url('../img/link-l.png') no-repeat 5px;
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
