--- a/assets/templates/crypto/index.html
+++ b/assets/templates/crypto/index.html
@@ -59,6 +59,7 @@
   						</div>
   					</div>
   				</div>
+          <a class="panel__link  panel__link--btc" href="">TRADE NOW</a>
   			</div>
   			<div class="price-boxes">
   				<div class="panel-group">
@@ -81,6 +82,7 @@
   						</div>
   					</div>
   				</div>
+          <a class="panel__link  panel__link--eth" href="">TRADE NOW</a>
   			</div>
         <div class="price-boxes">
   				<div class="panel-group">
@@ -103,6 +105,7 @@
   						</div>
   					</div>
   				</div>
+          <a class="panel__link  panel__link--ltc" href="">TRADE NOW</a>
   			</div>
       </div>
 		<!-- </div> -->
