--- a/assets/templates/crypto/css/media.css
+++ b/assets/templates/crypto/css/media.css
@@ -24,7 +24,7 @@
   
   .info {
     /* min-height: 600px; */
-    background: url("../img/header-t.png") no-repeat;
+    background: url("../img/header.png") no-repeat;
     background-size: cover;
   }
   
