--- a/assets/templates/crypto/css/style.css
+++ b/assets/templates/crypto/css/style.css
@@ -68,7 +68,7 @@ body {
 /*Инфо*/
 .info {
   min-height: 600px;
-  background: url("../img/header-t.png") no-repeat center;
+  background: url("../img/header.png") no-repeat top;
   background-size: cover;
   border-bottom: 2px solid black;
 }
