--- a/assets/templates/crypto/index.html
+++ b/assets/templates/crypto/index.html
@@ -61,7 +61,7 @@
   				</div>
           <a class="panel__link  panel__link--btc" href="">TRADE NOW</a>
   			</div>
-  			<div class="price-boxes">
+  			<div class="price-boxes    price-boxes--eth">
   				<div class="panel-group">
   					<div class="panel panel-default">
   						<div class="panel-body">
