--- a/assets/templates/crypto/api/style.css
+++ b/assets/templates/crypto/api/style.css
@@ -45,7 +45,7 @@ a {
 
 .price-display {
 	margin-top: 0;
-	padding-top: 30px;
+	padding-top: 25px;
 	font-size: 20px;
 	font-weight: bold;
 	text-align: center;
@@ -113,12 +113,21 @@ span {
 		border-radius: 5px;
 		background: rgba(255, 255, 255, 0);
 	}
+	
+	.price-boxes--eth {
+		margin-bottom: 35px;
+	}
+	
+	.panel__link {
+		margin-top: 20px;
+	}
 }
 
 @media only screen and (min-width : 320px) and (max-width : 480px) {
   .panel__flex {
 		flex-direction: column;
-		padding: 30px 0;
+		padding-top: 30px;
+		padding-bottom: 0;
 	}
 	
 	.panel {
@@ -128,5 +137,9 @@ span {
 		border: 2px solid #fff;
 		border-radius: 5px;
 		background: rgba(255, 255, 255, 0);
+	}
+	
+	.panel__link {
+		margin-bottom: 45px;
 	}
 }
