--- a/assets/templates/crypto/css/style.css
+++ b/assets/templates/crypto/css/style.css
@@ -63,12 +63,13 @@ body {
 .panels {
 	border-bottom: 2px solid #fff;
 	background: #000 url('../img/panel-bg.png');
+	background-size: cover;
 }
 
 /*Инфо*/
 .info {
   min-height: 600px;
-  background: url("../img/header.png") no-repeat top;
+  background: url("../img/header.png") no-repeat center;
   background-size: cover;
   border-bottom: 2px solid black;
 }
