--- a/assets/templates/crypto-b/index.html
+++ b/assets/templates/crypto-b/index.html
@@ -66,8 +66,9 @@
   						</div>
   					</div>
   				</div>
+          <a class="panel__link  panel__link--btc" href="">TRADE NOW</a>
   			</div>
-  			<div class="price-boxes">
+  			<div class="price-boxes  price-boxes--eth">
   				<div class="panel-group">
   					<div class="panel panel-default">
   						<div class="panel-body">
@@ -88,8 +89,9 @@
   						</div>
   					</div>
   				</div>
+          <a class="panel__link  panel__link--eth" href="">TRADE NOW</a>
   			</div>
-        <div class="price-boxes">
+        <div class="price-boxes  price-boxes--ltc">
   				<div class="panel-group">
   					<div class="panel panel-default">
   						<div class="panel-body">
@@ -110,6 +112,7 @@
   						</div>
   					</div>
   				</div>
+          <a class="panel__link  panel__link--ltc" href="">TRADE NOW</a>
   			</div>
       </div>
 		<!-- </div> -->
