--- a/assets/templates/crypto-b/css/style.css
+++ b/assets/templates/crypto-b/css/style.css
@@ -319,7 +319,7 @@ input::placeholder {
     text-align: center; } }
 
 .page-header {
-  background: #00aeef url("../img/header.png") top;
+  background: #00aeef url("../img/header.png") no-repeat top;
   background-size: cover; }
 
 .page-header__logo {
@@ -457,7 +457,8 @@ input::placeholder {
   .container {
     width: 95%; }
   .page-header {
-    background-size: inherit; }
+    background: #00aeef url("../img/header-m.png") no-repeat top;
+    background-size: cover; }
   .page-header__nav-list {
     width: 100%;
     -webkit-box-pack: center;
@@ -469,76 +470,19 @@ input::placeholder {
     padding: 5px 10px;
     font-size: 16px; } }
 
-/* iPads (горизонтальная) ----------- */
-@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
-  /* стили */ }
-
-/* iPads (вертикальная) ----------- */
-@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
-  /* стили */ }
-
-/* iPad 3**********/
-@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 2) {
-  /* стили */ }
-
-@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 2) {
-  /* стили */ }
-
 /* Настольные компьютеры и ноутбуки ----------- */
 @media only screen and (min-width: 1224px) {
   .container {
-    width: 85%; } }
+    width: 85%; }
+  .page-header {
+    background-size: inherit; } }
 
 /* Большие экраны ----------- */
 @media only screen and (min-width: 1824px) {
   .container {
-    width: 70%; } }
-
-/* iPhone 4 ----------- */
-@media only screen and (min-width: 320px) and (max-width: 480px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 2) {
-  /* стили */ }
-
-@media only screen and (min-width: 320px) and (max-width: 480px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 2) {
-  /* стили */ }
-
-/* iPhone 5 ----------- */
-@media only screen and (min-width: 320px) and (max-height: 568px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 2) {
-  /* стили */ }
-
-@media only screen and (min-width: 320px) and (max-height: 568px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2) {
-  /* стили */ }
-
-/* iPhone 6 ----------- */
-@media only screen and (min-width: 375px) and (max-height: 667px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 2) {
-  /* стили */ }
-
-@media only screen and (min-width: 375px) and (max-height: 667px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2) {
-  /* стили */ }
-
-/* iPhone 6+ ----------- */
-@media only screen and (min-width: 414px) and (max-height: 736px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 2) {
-  /* стили */ }
-
-@media only screen and (min-width: 414px) and (max-height: 736px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2) {
-  /* стили */ }
-
-/* Samsung Galaxy S3 ----------- */
-@media only screen and (min-width: 320px) and (max-height: 640px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 2) {
-  /* стили */ }
-
-@media only screen and (min-width: 320px) and (max-height: 640px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2) {
-  /* стили */ }
-
-/* Samsung Galaxy S4 ----------- */
-@media only screen and (min-width: 320px) and (max-height: 640px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 3) {
-  /* стили */ }
-
-@media only screen and (min-width: 320px) and (max-height: 640px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 3) {
-  /* стили */ }
-
-/* Samsung Galaxy S5 ----------- */
-@media only screen and (min-width: 360px) and (max-height: 640px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 3) {
-  /* стили */ }
+    width: 70%; }
+  .page-header {
+    background-size: cover; } }
 
 .trade {
   background: #000; }
