--- a/assets/templates/crypto-b/sass/blocks/page-header.scss
+++ b/assets/templates/crypto-b/sass/blocks/page-header.scss
@@ -64,9 +64,10 @@
     width: 95%;
   }
   
-  // .page-header {
-  //   min-height: 1300px;
-  // }
+  .page-header {
+    background: #00aeef url("../img/header-m.png") no-repeat top;
+    background-size: cover;
+  }
   
   .page-header__logo {
     width: 250px;
