--- a/assets/templates/crypto-b/api/style.css
+++ b/assets/templates/crypto-b/api/style.css
@@ -113,13 +113,22 @@ span {
 @media only screen and (min-width : 320px) and (max-width : 480px) {
   .panel__flex {
 		flex-direction: column;
-		padding: 30px 0;
+		padding-top: 30px;
+		padding-bottom: 0;
 	}
 	
 	.panel {
-		margin-bottom: 20px;
+		/* margin-bottom: 20px; */
 		width: auto;
-		/* background: url('../img/panel-b-s.png') no-repeat top; */
-		background: rgba(255, 255, 255, 0.9);
+		background: rgba(255, 255, 255, 0.5);
+	}
+	
+	.price-boxes {
+		color: #000;
+	}
+	
+	.panel__link {
+		margin-top: 30px;
+		margin-bottom: 30px;
 	}
 }
