--- a/assets/templates/crypto-b/sass/blocks/news.scss
+++ b/assets/templates/crypto-b/sass/blocks/news.scss
@@ -43,11 +43,6 @@
   .news__middle-column {
     margin-bottom: 50px;
   }
-  
-  .news__left-column-second,
-  .news__middle-column-second {
-    margin-bottom: 50px;
-  }
 }
 
 /* Smartphones (горизонтальная) ----------- */
@@ -55,31 +50,21 @@
 
 /* Smartphones (вертикальная) ----------- */
 @media only screen and (max-width: 320px) {    
-  .news__flex {
-    flex-direction: column;
-    padding-top: 40px;
-  }
-  
-  .news__left-column,
-  .news__middle-column,
-  .news__right-column {
-    width: 100%;
-    text-align: center;
-  }
-  
-  .news__left-column,
-  .news__middle-column {
-    margin-bottom: 50px;
-  }
-  
-  .news__right-column {
-    padding-bottom: 40px;
-  }
-  
-  .news__left-column-second,
-  .news__middle-column-second {
-    margin-bottom: 50px;
-  }
+  // .news__flex {
+  //   flex-direction: column;
+  // }
+  // 
+  // .news__left-column,
+  // .news__middle-column,
+  // .news__right-column {
+  //   width: 100%;
+  //   text-align: center;
+  // }
+  // 
+  // .news__left-column,
+  // .news__middle-column {
+  //   margin-bottom: 50px;
+  // }
 }
 
 /* iPads (вертикальная и горизонтальная) ----------- */
