--- a/assets/templates/forex/templates/account-types.html
+++ b/assets/templates/forex/templates/account-types.html
@@ -15,9 +15,9 @@
       <button class="page-header__toggle" type="button">Открыть меню</button>
       <div class="container__temp">
         <div class="page-header__flex">
-          <a href="../index.html">
+          <!-- <a href="../index.html">
             <img src="../img/logo.png" alt="Forex24">
-          </a>
+          </a> -->
           <ul class="page-header__menu">
             <li class="page-header__item"><a href="#">Home</a></li>
             <li class="page-header__item"><a href="#">About</a></li>
@@ -78,6 +78,7 @@
           </footer>
         </div>
         <div class="account__box  account__box--silver">
+          <div class="account__popular"></div>
           <header>
             <b>Classic Silver</b>
             <p>Trading for<br>experienced investors</p>
@@ -105,7 +106,7 @@
         </div>
         <div class="account__box  account__box--gold">
           <header>
-            <b>Premium Golde</b>
+            <b>Premium Gold</b>
             <p>Advanced Trading For<br>Serious Investors</p>
           </header>
           <p>Min First Deposit: $/£/€/1,000</p>
