--- a/assets/templates/forex/templates/account-types.html
+++ b/assets/templates/forex/templates/account-types.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
-  <header class="page-header">
+  <header class="page-header  page-header--account">
     <nav class="page-header__main-nav  page-header__main-nav--closed  page-header__main-nav--nojs">
       <button class="page-header__toggle" type="button">Открыть меню</button>
       <div class="container__temp">
@@ -39,6 +39,9 @@
       <div class="page-header__sub-flex">
         <p>Accounts<br>types</p>
         <div class="page-header__sub-box">
+          <a class="page-header__logo-menu" href="../index.html">
+            <img src="../img/logo-menu.png" alt="">
+          </a>
           <a href="#">ACCOUNT TYPES</a>
           <a href="#">ACCOUNT COMPARISON</a>
           <a href="#">PRODUCT SPECIFICATION</a>
