--- a/assets/templates/forex/css/style.css
+++ b/assets/templates/forex/css/style.css
@@ -834,12 +834,19 @@ body {
   font-size: 18px;
   text-align: center; }
 
+.page-header--account {
+  position: relative;
+  background: #fff;
+  z-index: 10; }
+
 .page-header__sub-flex {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex; }
+  display: flex;
+  position: relative; }
 
 .page-header__sub-box {
+  position: absolute;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -847,28 +854,69 @@ body {
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
+  top: -460px;
+  left: 150px;
   width: auto;
-  height: 340px;
+  height: 480px;
   margin-left: 100px;
   background: rgba(0, 0, 0, 0.7);
+  -webkit-transition: 0.8s;
+  transition: 0.8s;
   z-index: 5; }
+  .page-header__sub-box:hover {
+    -webkit-transform: translateY(460px);
+    transform: translateY(460px); }
   .page-header__sub-box a {
     padding: 15px 30px;
     color: #fff;
     font-size: 12px;
     font-weight: bold;
-    text-decoration: none; }
+    text-decoration: none;
+    -webkit-transition: 0.3s;
+    transition: 0.3s; }
+    .page-header__sub-box a:hover {
+      -webkit-transform: scale(1.1);
+      transform: scale(1.1); }
+  .page-header__sub-box::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -70px;
+    width: 50%;
+    height: 70px;
+    background: -webkit-gradient(linear, left bottom, right top, color-stop(50%, transparent), color-stop(50.7%, #000));
+    background: linear-gradient(to top right, transparent 50%, #000 50.7%);
+    opacity: 0.7; }
+  .page-header__sub-box::after {
+    content: "";
+    position: absolute;
+    right: 0;
+    bottom: -70px;
+    width: 50%;
+    height: 70px;
+    background: -webkit-gradient(linear, right bottom, left top, color-stop(50%, transparent), color-stop(50.7%, #000));
+    background: linear-gradient(to top left, transparent 50%, #000 50.7%);
+    opacity: 0.7; }
+
+.page-header__logo-menu:hover {
+  -webkit-transform: scale(1);
+  transform: scale(1); }
 
 .page-header__arrow {
+  position: absolute;
+  bottom: -40px;
+  left: 0;
+  right: 0;
   display: block;
-  margin: auto;
   width: 38px;
   height: 38px;
+  margin: auto;
   border: none;
   background: url("../img/acc-elipse.png") no-repeat center, url("../img/acc-arrow.png") no-repeat 12px 14px;
   -webkit-transition: 0.3s;
   transition: 0.3s;
-  outline: none; }
+  outline: none;
+  z-index: 5; }
   .page-header__arrow:hover {
     -webkit-transform: rotate(180deg);
     transform: rotate(180deg); }
