--- a/assets/templates/forex/sass/blocks/account-types.scss
+++ b/assets/templates/forex/sass/blocks/account-types.scss
@@ -23,22 +23,38 @@
   }
 }
 
-// .page-header__sub-menu {
-//   position: relative;
-// }
+.page-header--account {
+  position: relative;
+  background: #fff;
+  z-index: 10;
+}
+
+.page-header__sub-menu {
+  
+}
 
 .page-header__sub-flex {
   display: flex;
+  position: relative;
 }
 
 .page-header__sub-box {
+  position: absolute;
   display: flex;
   flex-direction: column;
+  // position: relative;
+  top: -460px;
+  left: 150px;
   width: auto;
-  height: 340px;
+  height: 480px;
   margin-left: 100px;
   background: rgba(0, 0, 0, 0.7);
+  transition: 0.8s;
   z-index: 5;
+  
+  &:hover {
+    transform: translateY(460px);
+  }
   
   & a {
     padding: 15px 30px;
@@ -46,23 +62,65 @@
     font-size: 12px;
     font-weight: bold;
     text-decoration: none;
+    transition: 0.3s;
+    
+    &:hover {
+      transform: scale(1.1);
+    }
+  }
+  
+  &::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -70px;
+    width: 50%;
+    height: 70px;
+    background: linear-gradient(to top right,transparent 50%, #000 50.7%);
+    opacity: 0.7;
+  }
+  
+  &::after {
+    content: "";
+    position: absolute;
+    right: 0;
+    bottom: -70px;
+    width: 50%;
+    height: 70px;
+    background: linear-gradient(to top left,transparent 50%, #000 50.7%);
+    opacity: 0.7;
+  }
+}
+
+.page-header__logo-menu {
+  
+  &:hover {
+    transform: scale(1);
   }
 }
 
 .page-header__arrow {
+  position: absolute;
+  bottom: -40px;
+  left: 0;
+  right: 0;
   display: block;
-  margin: auto;
   width: 38px;
   height: 38px;
+  margin: auto;
+  // margin-top: 20px;
   border: none;
   background: url('../img/acc-elipse.png') no-repeat center,
               url('../img/acc-arrow.png') no-repeat 12px 14px;
   transition: 0.3s;
   outline: none;
+  z-index: 5;
   
   &:hover {
     transform: rotate(180deg);
   }
+  
+  
 }
 
 .account__types {
