--- a/assets/templates/forex/templates/account-types.html
+++ b/assets/templates/forex/templates/account-types.html
@@ -13,7 +13,7 @@
   <header class="page-header  page-header--account">
     <nav class="page-header__main-nav  page-header__main-nav--closed  page-header__main-nav--nojs">
       <button class="page-header__toggle" type="button">Открыть меню</button>
-      <div class="container__temp">
+      <div class="container">
         <div class="page-header__flex">
           <!-- <a href="../index.html">
             <img src="../img/logo.png" alt="Forex24">
@@ -21,7 +21,7 @@
           <ul class="page-header__menu">
             <li class="page-header__item"><a href="#">Home</a></li>
             <li class="page-header__item"><a href="#">About</a></li>
-            <li class="page-header__item"><a href="#">Trading</a></li>
+            <li class="page-header__item  page-header__item--active"><a href="#">Trading</a></li>
             <li class="page-header__item"><a href="#">Resources</a></li>
             <li class="page-header__item"><a href="#">Partners</a></li>
             <li class="page-header__item"><a href="#">Contact Us</a></li>
@@ -35,7 +35,7 @@
     </nav>
   </header>
   <section class="page-header__sub-menu">
-    <div class="container__temp">
+    <div class="container">
       <div class="page-header__sub-flex">
         <p>Accounts<br>types</p>
         <div class="page-header__sub-box">
@@ -54,7 +54,7 @@
     </div>
   </section>
   <section class="account">
-    <div class="container__temp">
+    <div class="container">
       <p>We present our customers with an account selection that can satisfy each trader’s needs and preferences. Our team has thought about even the smallest of details and produced different account types so you can select the one that best suits your needs. There are different accounts to choose from and each one has its benefits.</p>
       <div class="account__types">
         <div class="account__box  account__box--bronze">
@@ -191,7 +191,7 @@
     </div>
   </section>
   <footer class="page-footer">
-    <div class="container__temp">
+    <div class="container">
       <div class="page-footer__flex">
         <div class="page-footer__left-column">
           <b>Risk warning</b>
@@ -252,6 +252,6 @@
   </footer>
 <!-- <script src="js/jquery.min.js"></script> -->
 <!-- <script src="js/slick/slick.min.js"></script> -->
-<script src="js/script.js"></script>
+<script src="../js/mobile-menu.js"></script>
 </body>
 </html>
