--- a/assets/templates/forex/css/style.css
+++ b/assets/templates/forex/css/style.css
@@ -4,11 +4,7 @@ body {
   font-family: 'SF UI Text', 'Arial' sans-serif; }
 
 .container {
-  width: 1055px;
-  margin: auto; }
-
-.container__temp {
-  width: 1350px;
+  width: 70%;
   margin: auto; }
 
 @media screen and (max-width: 1200px) {
@@ -90,7 +86,11 @@ body {
     transition: 0.2s; }
     .page-header__item a:hover {
       color: #f2c318;
-      border-bottom: 2px solid #f2c318; }
+      border-bottom: 1px solid #f2c318; }
+
+.page-header__item--active a {
+  color: #f2c318;
+  border-bottom: 1px solid #f2c318; }
 
 .page-header__link {
   padding: 10px 25px;
@@ -899,8 +899,8 @@ body {
     opacity: 0.7; }
 
 .page-header__logo-menu:hover {
-  -webkit-transform: scale(1);
-  transform: scale(1); }
+  -webkit-transform: none !important;
+  transform: none !important; }
 
 .page-header__arrow {
   position: absolute;
@@ -931,11 +931,14 @@ body {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  padding: 100px 0; }
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  padding-top: 100px; }
 
 .account__box {
   position: relative;
   width: 250px;
+  margin-bottom: 70px;
   -webkit-box-shadow: 0px 0px 7px 0px rgba(2, 2, 2, 0.35);
   box-shadow: 0px 0px 7px 0px rgba(2, 2, 2, 0.35);
   cursor: pointer;
@@ -1031,5 +1034,15 @@ body {
   background: #2e2963; }
   .account__pay img {
     display: block;
+    max-width: 100%;
     margin: auto;
     padding: 30px 0; }
+
+@media screen and (max-width: 1200px) {
+  .container__temp {
+    width: 96%; }
+  .page-header__sub-menu {
+    height: 100px; }
+    .page-header__sub-menu p {
+      margin-top: 25px;
+      font-size: 20px; } }
