--- a/assets/templates/forex/index.html
+++ b/assets/templates/forex/index.html
@@ -236,6 +236,7 @@
   </footer>
   <script src="js/jquery.min.js"></script>
   <script src="js/slick/slick.min.js"></script>
-  <script src="js/script.js"></script>
+  <script src="js/slider.js"></script>
+  <script src="js/mobile-menu.js"></script>
 </body>
 </html>
