--- a/assets/templates/forex/templates/account-types.html
+++ b/assets/templates/forex/templates/account-types.html
@@ -21,7 +21,7 @@
           <ul class="page-header__menu">
             <li class="page-header__item"><a href="#">Home</a></li>
             <li class="page-header__item"><a href="#">About</a></li>
-            <li class="page-header__item  page-header__item--active"><a href="#">Trading</a></li>
+            <li class="page-header__item"><a class="page-header__item--active" href="#">Trading</a></li>
             <li class="page-header__item"><a href="#">Resources</a></li>
             <li class="page-header__item"><a href="#">Partners</a></li>
             <li class="page-header__item"><a href="#">Contact Us</a></li>
@@ -37,7 +37,7 @@
   <section class="page-header__sub-menu">
     <div class="container">
       <div class="page-header__sub-flex">
-        <p>Accounts<br>types</p>
+        <p>Accounts types</p>
         <div class="page-header__sub-box">
           <a class="page-header__logo-menu" href="../index.html">
             <img src="../img/logo-menu.png" alt="">
