--- a/assets/templates/forex/css/style.css
+++ b/assets/templates/forex/css/style.css
@@ -858,10 +858,9 @@ body {
   -ms-flex-direction: column;
   flex-direction: column;
   top: -460px;
-  left: 150px;
+  left: 60px;
   width: auto;
   height: 480px;
-  margin-left: 100px;
   background: rgba(0, 0, 0, 0.7);
   -webkit-transition: 0.8s;
   transition: 0.8s;
@@ -1045,8 +1044,17 @@ body {
   .page-header__sub-menu {
     height: 100px; }
     .page-header__sub-menu p {
-      margin-top: 25px;
-      font-size: 20px; } }
+      margin-top: 35px;
+      font-size: 20px; }
+  .page-header__sub-box {
+    top: -400px;
+    left: 30px;
+    height: 400px; }
+    .page-header__sub-box:hover {
+      -webkit-transform: translateY(400px);
+      transform: translateY(400px); }
+    .page-header__sub-box a {
+      padding: 10px 30px; } }
 
 @media screen and (max-width: 768px) {
   .page-header__sub-flex {
