--- a/assets/templates/forex/index.html
+++ b/assets/templates/forex/index.html
@@ -175,7 +175,7 @@
     </div>
   </section>
   <footer class="page-footer">
-    <div class="container  container--width">
+    <div class="container">
       <div class="page-footer__flex">
         <div class="page-footer__left-column">
           <b>Risk warning</b>
