--- a/assets/templates/forex/templates/account-types.html
+++ b/assets/templates/forex/templates/account-types.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Forex 24</title>
+  <title>Trading - Forex 24</title>
   <!-- <link rel="stylesheet" href="js/slick/slick.css"/> -->
   <!-- <link rel="stylesheet" href="js/slick/slick-theme.css"/> -->
   <link rel="stylesheet" href="../css/style.min.css">
@@ -19,7 +19,7 @@
             <img src="../img/logo.png" alt="Forex24">
           </a> -->
           <ul class="page-header__menu">
-            <li class="page-header__item"><a href="#">Home</a></li>
+            <li class="page-header__item"><a href="../index.html">Home</a></li>
             <li class="page-header__item"><a href="#">About</a></li>
             <li class="page-header__item"><a class="page-header__item--active" href="#">Trading</a></li>
             <li class="page-header__item"><a href="#">Resources</a></li>
