--- a/assets/templates/crypto/api/panel.css
+++ b/assets/templates/crypto/api/panel.css
@@ -18,7 +18,7 @@
 	width: 350px;
 	height: 420px;
 	font-size: 16px;
-	background: url('../img/panel-b.png') no-repeat;
+	background: url('../img/panel-t.png') no-repeat;
 	background-size: cover;
 	/* background: rgba(255, 255, 255, 0.9); */
 }
