--- a/assets/templates/crypto/index.html
+++ b/assets/templates/crypto/index.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Cryptologi</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/crypto.css">
   <link rel="stylesheet" href="css/media.css">
   <!-- API -->
-	<link rel="stylesheet" href="api/style.css"></link>
+	<link rel="stylesheet" href="api/panel.css"></link>
   
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
