--- a/assets/templates/crypto/template/trading.html
+++ b/assets/templates/crypto/template/trading.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Trading - Cryptologi</title>
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/crypto.css">
   <link rel="stylesheet" href="../css/media.css">
 </head>
 <body>
