--- a/assets/templates/crypto/index.html
+++ b/assets/templates/crypto/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/crypto.css">
   <link rel="stylesheet" href="css/media.css">
   <!-- API -->
-	<link rel="stylesheet" href="api/panel.css"></link>
+	<link rel="stylesheet" href="api/panelson.css"></link>
   
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
