--- a/assets/templates/forex/templates/about-us.html
+++ b/assets/templates/forex/templates/about-us.html
@@ -34,12 +34,12 @@
       </div>
     </nav>
   </header>
-  <section class="page-header__sub-menu">
+  <section class="sub-menu">
     <div class="container">
-      <div class="page-header__sub-flex">
+      <div class="sub-menu__flex">
         <p>About Us</p>
-        <div class="page-header__sub-box  page-header__sub-box--about">
-          <a class="page-header__logo-menu" href="../index.html">
+        <div class="sub-menu__box  sub-menu__box--about">
+          <a class="sub-menu__logo" href="../index.html">
             <img src="../img/logo-menu.png" alt="">
           </a>
           <a href="#">ACCOUNT TYPES</a>
@@ -48,7 +48,7 @@
           <a href="#">TRADING SPECIFICATION</a>
           <a href="#">FUNDING AND WITHDROVAL</a>
           <a href="#">ANNOUNCEMENTS</a>
-          <button class="page-header__arrow"></button>
+          <button class="sub-menu__arrow"></button>
         </div>
       </div>
     </div>
