--- a/assets/templates/forex/css/style.css
+++ b/assets/templates/forex/css/style.css
@@ -62,6 +62,11 @@ body {
   -ms-flex-align: center;
   align-items: center; }
 
+.page-header--account {
+  position: relative;
+  background: #fff;
+  z-index: 10; }
+
 .page-header__menu {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -78,7 +83,6 @@ body {
   margin-right: 10px; }
   .page-header__item a {
     color: #2e2963;
-    font-size: 18px;
     font-weight: bold;
     text-decoration: none;
     text-transform: uppercase;
@@ -817,29 +821,18 @@ body {
     .page-footer__right-column--link a {
       margin-bottom: 10px; } }
 
-.page-header__sub-menu {
-  height: 120px;
-  border-top: 10px solid #2b2154;
+.sub-menu {
+  height: 110px;
+  border-top: 5px solid #2b2154;
   background: #4b426d; }
-  .page-header__sub-menu p {
+  .sub-menu p {
     margin-top: 40px;
     color: #fff;
     font-size: 25px;
     font-weight: bold;
     text-transform: uppercase; }
 
-.account p {
-  margin-top: 40px;
-  color: #000e55;
-  font-size: 18px;
-  text-align: center; }
-
-.page-header--account {
-  position: relative;
-  background: #fff;
-  z-index: 10; }
-
-.page-header__sub-flex {
+.sub-menu__flex {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -848,7 +841,7 @@ body {
   justify-content: center;
   position: relative; }
 
-.page-header__sub-box {
+.sub-menu__box {
   position: absolute;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -858,17 +851,20 @@ body {
   -ms-flex-direction: column;
   flex-direction: column;
   top: -460px;
-  left: 60px;
   width: auto;
   height: 480px;
   background: rgba(0, 0, 0, 0.7);
   -webkit-transition: 0.8s;
   transition: 0.8s;
   z-index: 5; }
-  .page-header__sub-box:hover {
+  .sub-menu__box:hover {
     -webkit-transform: translateY(460px);
     transform: translateY(460px); }
-  .page-header__sub-box a {
+  .sub-menu__box:hover .sub-menu__arrow {
+    -webkit-transform: rotate(180deg);
+    transform: rotate(180deg);
+    background: url("../img/acc-elipse.png") no-repeat center, url("../img/acc-arrow.png") no-repeat 11px 14px; }
+  .sub-menu__box a {
     padding: 15px 30px;
     color: #fff;
     font-size: 12px;
@@ -876,10 +872,10 @@ body {
     text-decoration: none;
     -webkit-transition: 0.3s;
     transition: 0.3s; }
-    .page-header__sub-box a:hover {
+    .sub-menu__box a:hover {
       -webkit-transform: scale(1.1);
       transform: scale(1.1); }
-  .page-header__sub-box::before {
+  .sub-menu__box::before {
     content: "";
     position: absolute;
     left: 0;
@@ -889,7 +885,7 @@ body {
     background: -webkit-gradient(linear, left bottom, right top, color-stop(50%, transparent), color-stop(50.7%, #000));
     background: linear-gradient(to top right, transparent 50%, #000 50.7%);
     opacity: 0.7; }
-  .page-header__sub-box::after {
+  .sub-menu__box::after {
     content: "";
     position: absolute;
     right: 0;
@@ -900,11 +896,17 @@ body {
     background: linear-gradient(to top left, transparent 50%, #000 50.7%);
     opacity: 0.7; }
 
-.page-header__logo-menu:hover {
+.sub-menu__box--account {
+  left: 40px; }
+
+.sub-menu__box--about {
+  left: -35px; }
+
+.sub-menu__logo:hover {
   -webkit-transform: none !important;
   transform: none !important; }
 
-.page-header__arrow {
+.sub-menu__arrow {
   position: absolute;
   bottom: -40px;
   left: 0;
@@ -919,9 +921,39 @@ body {
   transition: 0.3s;
   outline: none;
   z-index: 5; }
-  .page-header__arrow:hover {
-    -webkit-transform: rotate(180deg);
-    transform: rotate(180deg); }
+
+@media screen and (max-width: 1200px) {
+  .sub-menu {
+    height: 100px; }
+    .sub-menu p {
+      margin-top: 35px;
+      font-size: 20px; }
+  .sub-menu__box {
+    top: -390px;
+    left: 30px;
+    height: 400px; }
+    .sub-menu__box:hover {
+      -webkit-transform: translateY(390px);
+      transform: translateY(390px); }
+    .sub-menu__box a {
+      padding: 10px 30px; } }
+
+@media screen and (max-width: 768px) {
+  .sub-menu__flex {
+    -webkit-box-pack: start;
+    -ms-flex-pack: start;
+    justify-content: flex-start; }
+  .sub-menu p {
+    margin-top: 35px; }
+  .sub-menu__box {
+    left: auto;
+    right: 0; } }
+
+.account p {
+  margin-top: 40px;
+  color: #000e55;
+  font-size: 18px;
+  text-align: center; }
 
 .account__types {
   display: -webkit-box;
@@ -1040,32 +1072,7 @@ body {
     margin: auto;
     padding: 30px 0; }
 
-@media screen and (max-width: 1200px) {
-  .page-header__sub-menu {
-    height: 100px; }
-    .page-header__sub-menu p {
-      margin-top: 35px;
-      font-size: 20px; }
-  .page-header__sub-box {
-    top: -400px;
-    left: 30px;
-    height: 400px; }
-    .page-header__sub-box:hover {
-      -webkit-transform: translateY(400px);
-      transform: translateY(400px); }
-    .page-header__sub-box a {
-      padding: 10px 30px; } }
-
 @media screen and (max-width: 768px) {
-  .page-header__sub-flex {
-    -webkit-box-pack: start;
-    -ms-flex-pack: start;
-    justify-content: flex-start; }
-  .page-header__sub-menu p {
-    margin-top: 35px; }
-  .page-header__sub-box {
-    left: auto;
-    right: 0; }
   .account__types {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
